# pyword.c

./: BaseMode.h  LICENSE  README.md  main.py  pyproject.toml  pyword.c  pyword.h
pyword/: README.md  gil_yn.py  terp.py
