[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyword"
version = "0.0.13"
description = "Minimal PyWord C extension"
authors = [{ name = "PHOVOS", email = "PHOVOS@outlook.com" }]
requires-python = ">=3.12"

[tool.setuptools]
py-modules = []
zip-safe = false

[project.optional-dependencies]
dev = [
    "black",
    "ruff",
    "mypy",
    "nox",
    "pre-commit",
    "jupyterlab",
]

[[tool.setuptools.ext-modules]]
name = "pyword"
sources = ["pyword.c"]

[tool.mypy]
python_version = "3.12"
strict = true
show_error_codes = true
disallow_untyped_defs = true
exclude = ["build/", "dist/", ".venv/"]
ignore_missing_imports = true

[tool.ruff]
line-length = 88
exclude = ["build/", "dist/", ".venv/"]
extend-ignore = [
    "E501",  # line too long
    "W291",  # trailing whitespace
    "W293",  # blank line contains whitespace
    "W391",  # blank line at end of file
    "D206",  # docstring whitespace errors
    "D300",  # triple double quotes on one line
]

[tool.ruff.lint]
select = ["E", "F", "W", "B"]

[tool.ruff.format]
quote-style = "preserve"
skip-magic-trailing-comma = true
line-ending = "auto"

[tool.uv.workspace]
members = ["packages/*"]
exclude = ["packages/seeds"]

[tool.uv]
cache-keys = [{ file = "**/*.toml" }]